--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,23 @@
+# Environment
 .env
+
+# Python cache
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# Virtual environments
+venv/
+.env/
+.venv/
+env/
+ENV/
+
+# OS junk
+.DS_Store
+Thumbs.db
+
+# IDE stuff
+.vscode/
+.idea/
